# GFAz

./: .gitignore  .gitmodules  BUILD_GUIDE.md  CMakeLists.txt  GROWTH_WORKFLOW.md  PAV_WORKFLOW.md  README.md  WORKFLOW.md  backend_schema_map.md  command.txt  compare.sh  example.gfa  gfa_analyzer.py  gfa_compression_api.py  gpu_backend_optimization_plan.md  rolling_decompression_gpu_direct_writer_plan.md  rolling_scheduler_gpu_plan.md  test.sh  test_cpu_roundtrip.py  test_cpu_streaming_roundtrip.py  test_gpu_roundtrip.py  workflow.md
deprecated/: DISTRIBUTION.md  KNOWN_ISSUES.md  build_release.sh  cleanup_plan.md  test_gpu_conversion.py  workflow_codex.md
include/: add_haplotypes_workflow.hpp  codec.hpp  compression_workflow.hpp  debug_log.hpp  decompression_workflow.hpp  extraction_workflow.hpp  gfa_parser.hpp  gfa_writer.hpp  packed_2mer.hpp  path_encoder.hpp  rule_generator.hpp  rule_processor.hpp  serialization.hpp  threading_utils.hpp
include/cli/: commands.hpp  common.hpp
include/codec/: codec.hpp  serialization.hpp
include/gpu/: codec_gpu.cuh  codec_gpu_nvcomp.cuh  compression_workflow_gpu.hpp  compression_workflow_gpu_internal.hpp  decompression_workflow_gpu.hpp  decompression_workflow_gpu_internal.hpp  gfa_graph_gpu.hpp  gfa_writer_gpu.hpp  metadata_codec_gpu.hpp  path_compression_gpu_legacy.hpp  path_compression_gpu_rolling.hpp  path_decompression_gpu_legacy.hpp  path_decompression_gpu_plan.hpp  path_decompression_gpu_rolling.hpp  path_rulebook_gpu.hpp  serialization_gpu.hpp
include/gpu/compression/: compression_workflow_gpu.hpp  compression_workflow_gpu_internal.hpp  metadata_codec_gpu.hpp  path_compression_gpu_legacy.hpp  path_compression_gpu_rolling.hpp  path_rulebook_gpu.hpp  traversal_compression_gpu.hpp
include/gpu/core/: codec_gpu.cuh  gfa_graph_gpu.hpp  path_chunk_planner.hpp  serialization_gpu.hpp
include/gpu/decompression/: decompression_primitives_gpu.hpp  decompression_workflow_gpu.hpp  decompression_workflow_gpu_internal.hpp  path_decompression_gpu_plan.hpp  path_decompression_gpu_rolling.hpp  traversal_decode_gpu.hpp
include/gpu/io/: gfa_writer_gpu.hpp  gfa_writer_gpu_direct.hpp
include/grammar/: packed_2mer.hpp  path_encoder.hpp  rule_generator.hpp  rule_processor.hpp
include/io/: gfa_parser.hpp  gfa_write_utils.hpp  gfa_writer.hpp
include/model/: compressed_data.hpp  gfa_graph.hpp
include/utils/: debug_log.hpp  runtime_utils.hpp  threading_utils.hpp
include/workflows/: add_haplotypes_workflow.hpp  compression_debug.hpp  compression_utils.hpp  compression_workflow.hpp  decompression_debug.hpp  decompression_workflow.hpp  extraction_workflow.hpp  growth_workflow.hpp  pav_workflow.hpp
scripts/: README.md  benchmark_add_haplotypes.py  benchmark_decompress_modes.py  compare.py  extract_csvs.py  generate_table_rows.py  plot_eval_norm.py  plot_pareto.py  run_eval.py  split_gfa_tail.py
scripts/benchmark/: extract_queries.py  pav_compare_gfaz_odgi.py
scripts/data/: compress_directory.py  split_traversal_tail.py  split_traversal_tail.sh
scripts/eval/: README.md
scripts/eval/benchmark/: benchmark_compressors.py
scripts/eval/plot/: plot_grouped_bars.py  plot_normalized_bars.py
scripts/eval/table/: extract_table_csv.py  generate_table_rows.py
scripts/eval/validate/: compare_gfa.py
src/: add_haplotypes_workflow.cpp  bindings.cpp  codec.cpp  compression_workflow.cpp  decompression_workflow.cpp  extraction_workflow.cpp  gfa_parser.cpp  gfa_writer.cpp  gfaz_cli.cpp  path_encoder.cpp  rule_generator.cpp  rule_processor.cpp  serialization.cpp
src/cli/: add_haplotypes_command.cpp  common.cpp  compress_command.cpp  decompress_command.cpp  extract_path_command.cpp  extract_walk_command.cpp  gfaz_cli.cpp  growth_command.cpp  pav_command.cpp
src/codec/: codec.cpp  serialization.cpp
src/gpu/: codec_gpu.cu  codec_gpu_helpers.cu  codec_gpu_helpers2.cu  codec_gpu_helpers_decomp.cu  codec_gpu_helpers_rolling2.cu  codec_gpu_nvcomp.cu  compression_workflow_gpu.cu  decompression_workflow_gpu.cu  gfa_graph_gpu.cpp  gfa_writer_gpu.cu  metadata_codec_gpu.cu  path_chunk_planner.cpp  path_compression_gpu_legacy.cu  path_compression_gpu_rolling.cu  path_decompression_gpu_legacy.cu  path_decompression_gpu_plan.cu  path_decompression_gpu_rolling.cu  path_expand_gpu.cu  path_rule_remap_gpu.cu  path_rulebook_gpu.cu  serialization_gpu.cpp
src/gpu/compression/: compression_workflow_gpu.cu  metadata_codec_gpu.cu  path_compression_gpu_legacy.cu  path_compression_gpu_rolling.cu  path_rule_remap_gpu.cu  path_rulebook_gpu.cu  traversal_compression_gpu.cu
src/gpu/core/: codec_gpu.cu  gfa_graph_gpu.cpp  path_chunk_planner.cpp  serialization_gpu.cpp
src/gpu/decompression/: decompression_primitives_gpu.cu  decompression_workflow_gpu.cu  path_decompression_gpu_legacy.cu  path_decompression_gpu_plan.cu  path_decompression_gpu_rolling.cu  path_expand_gpu.cu  traversal_decode_gpu.cu
src/gpu/io/: gfa_writer_gpu.cu  gfa_writer_gpu_direct.cpp
src/grammar/: path_encoder.cpp  rule_generator.cpp  rule_processor.cpp
src/io/: gfa_parser.cpp  gfa_write_utils.cpp  gfa_writer.cpp
src/python/: bindings.cpp
src/utils/: runtime_utils.cpp
src/workflows/: add_haplotypes_workflow.cpp  compression_debug.cpp  compression_utils.cpp  compression_workflow.cpp  decompression_debug.cpp  decompression_workflow.cpp  extraction_workflow.cpp  growth_workflow.cpp  pav_workflow.cpp
tests/: README.md  __init__.py  _bootstrap.py
tests/cpu/: __init__.py  test_cpu_legacy_roundtrip.py  test_cpu_streaming_roundtrip.py
tests/fixtures/: pav_fixture.bed  pav_path_only_fixture.bed  pav_walk_fixture.bed
tests/gpu/: __init__.py  test_gpu_host_roundtrip.py  test_gpu_legacy_roundtrip.py  test_gpu_roundtrip.py  test_gpu_streaming_roundtrip.py
tests/regression/: __init__.py  regression_utils.py  test_cli_commands.py  test_compression_regression.py  test_example_regression.py
